--- a/SwrveSDK/tsconfig.json
+++ b/SwrveSDK/tsconfig.json
@@ -7,7 +7,8 @@
       "es5",
       "es6",
       "es2016.array.include",
-      "es2015.promise"
+      "es2015.promise",
+      "webworker"
     ],
     "outDir": "dist/lib",
     "rootDir": "src",
