--- a/SwrveSDK/package.json
+++ b/SwrveSDK/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swrve/web-sdk",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "author": "Swrve Inc.",
   "license": "Apache-2.0",
   "keywords": [
@@ -17,14 +17,16 @@
     "platform"
   ],
   "homepage": "https://github.com/Swrve/swrve-web-sdk#readme",
-  "bugs" : {
-    "url" : "https://github.com/Swrve/swrve-web-sdk/issues"
+  "bugs": {
+    "url": "https://github.com/Swrve/swrve-web-sdk/issues"
   },
   "repository": {
-    "type" : "git",
-    "url" : "git@github.com:Swrve/swrve-web-sdk.git"
+    "type": "git",
+    "url": "git@github.com:Swrve/swrve-web-sdk.git"
   },
-  "files": ["dist/**/*"],
+  "files": [
+    "dist/**/*"
+  ],
   "browser": "dist/SwrveSDK.js",
   "scripts": {
     "bundle": "yarn run bundle:prod",
@@ -38,7 +40,7 @@
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
-    "ts-loader": "^5.2.1",
+    "ts-loader": "^5.2.2",
     "ts-md5": "^1.2.4",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.10.0",
