--- a/SwrveSDK/package.json
+++ b/SwrveSDK/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swrve/web-sdk",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "author": "Swrve Inc.",
   "license": "Apache-2.0",
   "keywords": [
@@ -35,23 +35,23 @@
     "bundle:release": "yarn run bundle:prod",
     "stats": "webpack --config webpack.prod.js --profile --json > stats.json && webpack-bundle-analyzer stats.json --mode static --no-open",
     "clean": "yarn cache clean && rm -rf ./dist",
-    "lint": "tslint --project ./tsconfig.json",
+    "lint": "tslint --project tsconfig.json",
     "prepublish": "yarn bundle:release"
   },
   "devDependencies": {
-    "clean-webpack-plugin": "^0.1.19",
-    "ts-loader": "^5.2.2",
-    "ts-md5": "^1.2.4",
-    "tslint": "^5.11.0",
-    "tslint-config-airbnb": "^5.10.0",
-    "tslint-loader": "^3.6.0",
-    "tslint-sonarts": "^1.8.0",
-    "typedoc": "^0.12.0",
-    "typedoc-webpack-plugin": "^1.1.4",
-    "typescript": "3.0.3",
-    "webpack": "^4.20.2",
-    "webpack-bundle-analyzer": "^3.0.3",
-    "webpack-cli": "^3.1.2",
-    "webpack-merge": "^4.1.4"
+    "clean-webpack-plugin": "1.0.0",
+    "ts-loader": "5.3.3",
+    "ts-md5": "1.2.4",
+    "tslint": "5.12.1",
+    "tslint-config-airbnb": "5.11.1",
+    "tslint-loader": "3.5.4",
+    "tslint-sonarts": "1.8.0",
+    "typedoc": "0.14.1",
+    "typedoc-webpack-plugin": "1.1.4",
+    "typescript": "3.2.2",
+    "webpack": "4.28.4",
+    "webpack-bundle-analyzer": "3.0.3",
+    "webpack-cli": "3.2.1",
+    "webpack-merge": "4.2.1"
   }
 }
