--- a/SwrveSDK/package.json
+++ b/SwrveSDK/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@swrve/web-sdk",
-	"version": "1.4.3",
+	"version": "2.0.0",
 	"author": "Swrve Inc.",
 	"license": "Apache-2.0",
 	"keywords": [
@@ -24,32 +24,40 @@
 		"type": "git",
 		"url": "git@github.com:Swrve/swrve-web-sdk.git"
 	},
-	"files": [ "dist/**/*" ],
-	"browser": "dist/SwrveSDK.js",
+	"types": "dist/types/src/index.d.ts",
+	"files": [
+		"dist/SwrveSDK.js",
+		"dist/types",
+		"dist/SwrveWorker.js"
+	],
+	"main": "dist/SwrveSDK.js",
 	"scripts": {
 		"bundle": "yarn run bundle:prod",
-		"bundle:dev": "webpack --config webpack.dev.js --watch",
-		"bundle:prod": "webpack --config webpack.prod.js",
+		"bundle:dev": "tsc -p tsconfig-build.json --declaration --declarationDir dist/types && webpack --config webpack.dev.js --progress",
+		"bundle:prod": "tsc -p tsconfig-build.json --declaration --declarationDir dist/types && webpack --config webpack.prod.js --progress",
 		"bundle:release": "yarn run bundle:prod",
 		"stats": "webpack --config webpack.prod.js --profile --json > stats.json && webpack-bundle-analyzer stats.json --mode static --no-open",
 		"clean": "yarn cache clean && rm -rf ./dist",
 		"lint": "tslint --project tsconfig.json",
-		"prepublish": "yarn bundle:release"
+		"prepublish": "yarn bundle:release",
+		"test": "jest --ci --coverage --testResultsProcessor='jest-junit'",
+    	"test:watch": "jest --watch"
 	},
 	"devDependencies": {
+		"@types/jest": "^27.0.3",
+		"jest": "^27.3.1",
+		"jest-junit": "^13.0.0",
+		"ts-jest": "^27.0.7",
 		"clean-webpack-plugin": "1.0.0",
-		"ts-loader": "5.3.3",
-		"ts-md5": "1.2.4",
+		"ts-loader": "^9.2.6",
 		"tslint": "5.12.1",
-		"tslint-config-airbnb": "5.11.1",
-		"tslint-loader": "3.5.4",
-		"tslint-sonarts": "1.8.0",
-		"typedoc": "0.14.1",
-		"typedoc-webpack-plugin": "1.1.4",
-		"typescript": "3.2.2",
-		"webpack": "4.28.4",
+		"typescript": "^4.4.4",
+		"webpack": "^5.63.0",
+		"webpack-cli": "^4.9.1",
 		"webpack-bundle-analyzer": "3.0.3",
-		"webpack-cli": "3.2.1",
 		"webpack-merge": "4.2.1"
+	},
+	"dependencies": {
+		"@swrve/web-core": "1.0.0"
 	}
 }
