--- a/SwrveSDK/package.json
+++ b/SwrveSDK/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@swrve/web-sdk",
-	"version": "2.0.1",
+	"version": "2.0.2",
 	"author": "Swrve Inc.",
 	"license": "Apache-2.0",
 	"keywords": [
@@ -50,6 +50,7 @@
 		"ts-jest": "^27.0.7",
 		"clean-webpack-plugin": "1.0.0",
 		"ts-loader": "^9.2.6",
+		"strip-loader": "^0.1.2",
 		"tslint": "5.12.1",
 		"typescript": "^4.4.4",
 		"webpack": "^5.63.0",
