--- a/SwrveSDK/package.json
+++ b/SwrveSDK/package.json
@@ -1,64 +1,64 @@
 {
-	"name": "@swrve/web-sdk",
-	"version": "2.2.1",
-	"author": "Swrve Inc.",
-	"license": "Apache-2.0",
-	"keywords": [
-		"swrve",
-		"sdk",
-		"web",
-		"browser",
-		"js",
-		"chrome",
-		"firefox",
-		"safari",
-		"engagement",
-		"marketing",
-		"platform"
-	],
-	"homepage": "https://github.com/Swrve/swrve-web-sdk#readme",
-	"bugs": {
-		"url": "https://github.com/Swrve/swrve-web-sdk/issues"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git@github.com:Swrve/swrve-web-sdk.git"
-	},
-	"types": "dist/types/src/index.d.ts",
-	"files": [
-		"dist/SwrveSDK.js",
-		"dist/types",
-		"dist/SwrveWorker.js"
-	],
-	"main": "dist/SwrveSDK.js",
-	"scripts": {
-		"bundle": "yarn run bundle:prod",
-		"bundle:dev": "tsc -p tsconfig-build.json --declaration --declarationDir dist/types && webpack --config webpack.dev.js --progress",
-		"bundle:prod": "tsc -p tsconfig-build.json --declaration --declarationDir dist/types && webpack --config webpack.prod.js --progress",
-		"bundle:release": "yarn run bundle:prod",
-		"stats": "webpack --config webpack.prod.js --profile --json > stats.json && webpack-bundle-analyzer stats.json --mode static --no-open",
-		"clean": "yarn cache clean && rm -rf ./dist",
-		"lint": "tslint --project tsconfig.json",
-		"prepublish": "yarn bundle:release",
-		"test": "jest --ci --coverage --testResultsProcessor='jest-junit'",
-    	"test:watch": "jest --watch"
-	},
-	"devDependencies": {
-		"@types/jest": "^27.0.3",
-		"jest": "^27.3.1",
-		"jest-junit": "^13.0.0",
-		"ts-jest": "^27.0.7",
-		"clean-webpack-plugin": "1.0.0",
-		"ts-loader": "^9.2.6",
-		"strip-loader": "^0.1.2",
-		"tslint": "5.12.1",
-		"typescript": "^4.4.4",
-		"webpack": "^5.63.0",
-		"webpack-cli": "^4.9.1",
-		"webpack-bundle-analyzer": "3.0.3",
-		"webpack-merge": "4.2.1"
-	},
-	"dependencies": {
-		"@swrve/web-core": "1.2.0"
-	}
+  "name": "@swrve/web-sdk",
+  "version": "2.3.0",
+  "author": "Swrve Inc.",
+  "license": "Apache-2.0",
+  "keywords": [
+    "swrve",
+    "sdk",
+    "web",
+    "browser",
+    "js",
+    "chrome",
+    "firefox",
+    "safari",
+    "engagement",
+    "marketing",
+    "platform"
+  ],
+  "homepage": "https://github.com/Swrve/swrve-web-sdk#readme",
+  "bugs": {
+    "url": "https://github.com/Swrve/swrve-web-sdk/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Swrve/swrve-web-sdk.git"
+  },
+  "types": "dist/types/src/index.d.ts",
+  "files": [
+    "dist/SwrveSDK.js",
+    "dist/types",
+    "dist/SwrveWorker.js"
+  ],
+  "main": "dist/SwrveSDK.js",
+  "scripts": {
+    "bundle": "yarn run bundle:prod",
+    "bundle:dev": "tsc -p tsconfig-build.json --declaration --declarationDir dist/types && webpack --config webpack.dev.js --progress",
+    "bundle:prod": "tsc -p tsconfig-build.json --declaration --declarationDir dist/types && webpack --config webpack.prod.js --progress",
+    "bundle:release": "yarn run bundle:prod",
+    "stats": "webpack --config webpack.prod.js --profile --json > stats.json && webpack-bundle-analyzer stats.json --mode static --no-open",
+    "clean": "yarn cache clean && rm -rf ./dist",
+    "lint": "tslint --project tsconfig.json",
+    "prepublish": "yarn bundle:release",
+    "test": "jest --ci --coverage --testResultsProcessor='jest-junit'",
+    "test:watch": "jest --watch"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "clean-webpack-plugin": "1.0.0",
+    "jest": "^27.3.1",
+    "jest-junit": "^13.0.0",
+    "strip-loader": "^0.1.2",
+    "ts-jest": "^27.0.7",
+    "ts-loader": "^9.2.6",
+    "tslint": "5.12.1",
+    "typescript": "^4.4.4",
+    "webpack": "5.76.0",
+    "webpack-bundle-analyzer": "^4.10.1",
+    "webpack-cli": "4.10.0",
+    "webpack-merge": "4.2.1"
+  },
+  "dependencies": {
+    "@swrve/web-core": "1.3.0"
+  }
 }
